2009-02-22  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* test/CppGuiTest/ModalDialogTest.cpp
	(LocalDialog): extracted a new class to use with a new function
	testModalDialogEventLoop
	(testModalDialogTimer, testStdModalDialogTimer): renamed from
	testModalDialog and testStdModalDialog to distinguish from
	testModalDialogEventLoop. 
	(testModalDialogEventLoop): New test case to check operation of
	multi-level event loop handling.
	
2009-02-15  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* include/wxGuiTest/WxGuiTestApp.h 
	(m_eventLoop, m_eventStore, newEventQueue, nextEventQueue): 
	New members and get/set functions for loading event queues for
	posting and processing.

	* include/wxGuiTest/TestEventLoop.h: New file.

2009-02-13  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* build/bakefile/wxGuiTesting.bkl: Commented out code for
	including platform-specific files. Added code to generate a test
	target similar to (OK, lifted shamelessly from)the one generated
	by automake.

	* build/bakefile/presets/wx_win32.bkl: Added if Format != xcode2
	at 305 to remove no-dependency warning.

2009-02-08  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* src/wxGuiTest/WxGuiTestApp.cpp 
	(MainLoop): Replaced GetUseExitMainLoopOnIdle and
	GetDoExitMainLoopOnIdle with GetInteractive.
	(OnIdle): Deleted the function. It's no longer used.

	* src/wxGuiTest/TempInteractive.cpp (TempInteractive::ShowCurrentGui): 
	* src/wxGuiTest/CRCapture.cpp (CRCapture::Show): 
	* src/wxGuiTest/WxGuiTestHelper.cpp: 
	* include/wxGuiTest/WxGuiTestHelper.h: Replaced
	s_useExitMainLoopOnIdle and s_doExitMainLoopOnIdle and associated
	getter/setter functions with a single s_interaction which better
	describes what the flag is for. 
	

2009-02-07  John Ralls  <john@manjusri.ceridwen.fremont.ca.us>

	* test/CppGuiTest/EventSimulationHelperTest.cpp
	(EventSimulationHelperTest::setUp): Added a button which launches